fix(): banner image sizes and general bugs

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,8 +22,8 @@
     <string name="title_activity_movie_detail">Movie Detail</string>
 
     <!-- TODO The Movie DB API keys, change the default values using your own API Keys -->
-    <string name="movie_db_api_v3_key" translatable="false">YOUR V3 API KEY</string>
-    <string name="movie_db_api_v4_key" translatable="false">YOUR V4 API KEY</string>
+    <string name="movie_db_api_v3_key" translatable="false">YOUR_V3_API_KEY</string>
+    <string name="movie_db_api_v4_key" translatable="false">YOUR_V4_API_KEY</string>
 
     <!-- content description for image views -->
     <string name="content.description.errorImage">Error image view</string>
