--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -36,5 +36,9 @@
     <!-- Error messages -->
     <string name="error_no_network">Oops! Could not load movies, please check your internet connection.</string>
     <string name="error_no_results">Data not available.</string>
-    <string name="content.description.movieDb">The Movie DBB</string>
+    <string name="content.description.movieDb">The Movie Database</string>
+    <string name="action.menu.showFavourites">My Movies</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
