--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,7 +22,7 @@
     <string name="title_activity_movie_detail">Movie Detail</string>
 
     <!-- TODO The Movie DB API keys, change the default values using your own API Keys -->
-    <string name="movie_db_api_v3_key" translatable="false">API V3</string>
+    <string name="movie_db_api_v3_key" translatable="false">API_KEY_V3</string>
 
     <!-- content description for image views -->
     <string name="content.description.errorImage">Error image view</string>
@@ -44,4 +44,5 @@
     <string name="label_overview">Overview</string>
     <string name="label_trailers">Trailers</string>
     <string name="label_reviews">Reviews</string>
+    <string name="label_view_detail">View more</string>
 </resources>
