--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -44,6 +44,8 @@
     <string name="label_reviews">Reviews</string>
     <string name="label_view_detail">View more</string>
 
-    <string name="message_movie_added">The movie has been added to the favourites.</string>
+    <string name="message_movie_added">The movie has been added to your favourites.</string>
     <string name="message_movie_removed">The movie has been removed from your favourites.</string>
+    <string name="message_no_favourites">Add some movies to your favourites to view them.</string>
+    <string name="message_select_movie">Select a movie to view its details.</string>
 </resources>
