--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -48,4 +48,5 @@
     <string name="message_movie_removed">The movie has been removed from your favourites.</string>
     <string name="message_no_favourites">Add some movies to your favourites to view them.</string>
     <string name="message_select_movie">Select a movie to view its details.</string>
+    <string name="content_description_video">Play video from youtube.</string>
 </resources>
